fix gap

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,8 +26,13 @@ body{
 	color: var(--text);
 	background-color: var(--primary-clr);
 }
+img{
+	max-width: 100%;
+	height: auto;
+	display: block;
+}
 .container{
-	width: 1158px;
+	max-width: 1158px;
 	margin: 0 auto;
 	padding: 0 16px;
 }
@@ -103,7 +108,7 @@ body{
 /* *============================MAIN==================================== */
 .hero {
 	padding-top: 188px;
-	padding-bottom: 292px;
+	padding-bottom: 186px;
 	background-color: var(--dark);
 	text-align: center;
 }
@@ -209,7 +214,7 @@ body{
 	display: flex;
 	justify-content: space-between;
 	flex-wrap: wrap;
-	gap: 24;
+	gap: 24px;
 
 	list-style: none;
 }
@@ -249,6 +254,9 @@ body{
 	gap: 48px 24px;
 
 	list-style: none;
+}
+.portfolio-info{
+	padding: 32px 16px;
 }
 /* *============================FOOTER=================================== */
 .footer {
